# toygrad_cpu

./: CMakeLists.txt  README.md  main.cpp
examples/c++/: CMakeLists.txt  main.cpp
examples/python/: pygrad_main.py
src/: CMakeLists.txt  cgraph.cpp  cgraph.h  common.h  graph.h  nn.cpp  nn.h  ops.cpp  ops.h  pygrad.cpp  pygrad.h  pygrad_main.py  rand_gen.h  shape.h  str_assert.cpp  str_assert.h  tensor.cpp  tensor.h  tensor_accessor.cpp  tensor_accessor.h  tensor_graph.cpp  tensor_graph.h  tensor_indexer.cpp  tensor_indexer.h  tensor_iter.cpp  tensor_iter.h  vec.cpp  vec.h
src/assert/: str_assert.cpp  str_assert.h
src/nn/: linear.cpp  linear.h  nn.cpp  nn.h
src/python/: pygrad.cpp  pygrad.h
src/tensors/: ops.cpp  ops.h  shape.h  tensor.cpp  tensor.h  tensor_draw.cpp  tensor_draw.h  tensor_graph.cpp  tensor_graph.h  tensor_iter.cpp  vec.h
tests/: CMakeLists.txt  nn_test.cpp  tensor_test.cpp
