cmake_minimum_required(VERSION 3.28)
project(toygrad_cpu)

set(CMAKE_CXX_STANDARD 20)

include_directories(src)
set(PYTHON "path to Python.h here")
set(PYBIND "path to Pybind11 /include here")
set (CMAKE_CXX_FLAGS "-undefined dynamic_lookup")
include_directories(${PYTHON})
include_directories(${PYBIND})
add_subdirectory(src)
add_subdirectory(tests)
find_package(pybind11 REQUIRED)
pybind11_add_module(toygrad_cpu src/pygrad.cpp)
# add_executable(toygrad_cpu main.cpp)
target_link_libraries(toygrad_cpu PUBLIC toygrad_cpu_lib)
