cmake_minimum_required(VERSION 3.28)
project(toygrad_cpu)

set(CMAKE_CXX_STANDARD 20)

include_directories(src)
set(PYTHON "/opt/homebrew/Cellar/python@3.12/3.12.5/Frameworks/Python.framework/Versions/3.12/include/python3.12")
set(PYBIND "/opt/homebrew/Cellar/pybind11/2.13.5/include")
set (CMAKE_CXX_FLAGS "-undefined dynamic_lookup")
include_directories(${PYTHON})
include_directories(${PYBIND})
add_subdirectory(src)
add_subdirectory(tests)
find_package(pybind11 REQUIRED)
pybind11_add_module(toygrad_cpu src/pygrad.cpp)
# add_executable(toygrad_cpu main.cpp)
target_link_libraries(toygrad_cpu PUBLIC toygrad_cpu_lib)
